--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_solicitar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_solicitar.xml
@@ -48,7 +48,7 @@
                 android:layout_marginRight="15dp"
                 android:text="@string/seguir_sin_numero"
                 android:textSize="18sp"
-                android:backgroundTint="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:textColor="@color/colorTextButtonLogin"
                 tools:ignore="UnusedAttribute" />
 
@@ -71,7 +71,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:text="@string/registrar_cliente"
-                android:backgroundTint="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="18sp"
                 tools:ignore="UnusedAttribute" />
@@ -107,7 +107,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="15dp"
-                android:backgroundTint="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:textColor="@color/colorTextButtonLogin"
                 android:text="@string/buscar_cliente"
                 android:textSize="24sp"
