--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_venta_gas.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_venta_gas.xml
@@ -39,17 +39,16 @@
 
     <Button
         android:id="@+id/BtnVentaGasActivityGasLp"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/SagasTheme.Button"
         android:layout_width="134dp"
         android:layout_height="68dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
-        android:backgroundTint="@color/colorButtonLogin"
         android:text="@string/gas_lp"
         android:textAlignment="center"
         android:textColor="@color/colorTextButtonLogin"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_column="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TVVentaGasActivityTitulo"
@@ -58,13 +57,12 @@
 
     <Button
         android:id="@+id/BtnVentaGasActivtiyCilindroConGas"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/SagasTheme.Button"
         android:layout_width="135dp"
         android:layout_height="68dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
-        android:backgroundTint="@color/colorButtonLogin"
         android:text="@string/cilindro_con_gas_btn"
         android:textAlignment="center"
         android:textColor="@color/colorTextButtonLogin"
@@ -75,17 +73,16 @@
 
     <Button
         android:id="@+id/BtnVentaGasActivityCilindro"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/SagasTheme.Button"
         android:layout_width="135dp"
         android:layout_height="70dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
-        android:backgroundTint="@color/colorButtonLogin"
         android:text="@string/cilindro"
         android:textAlignment="center"
         android:textColor="@color/colorTextButtonLogin"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_column="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BtnVentaGasActivityGasLp"
@@ -94,17 +91,16 @@
 
     <Button
         android:id="@+id/BtnVentaGasActivityOtros"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/SagasTheme.Button"
         android:layout_width="135dp"
         android:layout_height="70dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
-        android:backgroundTint="@color/colorButtonLogin"
         android:text="@string/otros"
         android:textAlignment="center"
         android:textColor="@color/colorTextButtonLogin"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BtnVentaGasActivtiyCilindroConGas"
         tools:ignore="UnusedAttribute" />
@@ -113,7 +109,6 @@
         android:layout_width="0dp"
         android:layout_height="175dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/BtnVentagGasActivtyPagar"
@@ -146,9 +141,9 @@
         android:id="@+id/BtnVentagGasActivtyPagar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_weight="1"
-        android:backgroundTint="@color/colorButtonLogin"
+        style="@style/SagasTheme.Button"
         android:text="@string/pagar"
         android:textColor="@color/colorTextButtonLogin"
         android:textSize="24sp"
