--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/formulario_venta_camioneta_y_pipa.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/formulario_venta_camioneta_y_pipa.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:text="@string/credito"
         tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="8dp" />
+        tools:layout_editor_absoluteY="8dp"
+        tools:ignore="MissingConstraints" />
 
     <Switch
         android:id="@+id/SWFormularioVentaCamionetaYPipaFactura"
@@ -138,7 +139,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@color/colorButtonLogin"
+        style="@style/SagasTheme.Button"
         android:text="@string/message_cancel"
         android:textColor="@color/colorTextButtonLogin"
         app:layout_constraintStart_toStartOf="parent"
@@ -151,7 +152,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/colorButtonLogin"
+        style="@style/SagasTheme.Button"
         android:text="@string/pagar"
         android:textColor="@color/colorTextButtonLogin"
         app:layout_constraintEnd_toEndOf="parent"
