--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_captura_porcentaje.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_captura_porcentaje.xml
@@ -94,11 +94,11 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_gravity="center"
-        android:background="@color/colorButtonLogin"
+        style="@style/SagasTheme.Button"
         android:text="@string/message_acept"
         android:textColor="@color/colorTextButtonLogin"
         android:textSize="25dp"
         tools:ignore="SpUsage" />
-
+<!--        android:background="@color/colorButtonLogin"-->
 
 </LinearLayout>
