--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_lectura_p5000.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_lectura_p5000.xml
@@ -108,14 +108,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
-                android:background="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:paddingBottom="15dp"
                 android:paddingTop="15dp"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="18sp"
+                android:textSize="36sp"
                 tools:layout_editor_absoluteX="136dp"
                 tools:layout_editor_absoluteY="325dp" />
+            <!--                android:background="@color/colorButtonLogin"-->
         </LinearLayout>
     </ScrollView>
 
