--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,12 +15,12 @@
             android:id="@+id/textTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="@string/title_foto_magnatel_almacen"
             android:textColor="@color/colorTextLogin"
-            android:textSize="25dp"
+            android:textSize="18sp"
             android:textStyle="italic" />
 
     </LinearLayout>
@@ -27,14 +28,14 @@
     <com.jsibbold.zoomage.ZoomageView
         android:id="@+id/image_view_foto"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        app:zoomage_restrictBounds="false"
+        android:layout_height="200dp"
         app:zoomage_animateOnReset="true"
-        app:zoomage_autoResetMode="UNDER"
         app:zoomage_autoCenter="true"
-        app:zoomage_zoomable="true"
+        app:zoomage_autoResetMode="UNDER"
+        app:zoomage_maxScale="8"
         app:zoomage_minScale="0.6"
-        app:zoomage_maxScale="8" />
+        app:zoomage_restrictBounds="false"
+        app:zoomage_zoomable="true" />
 
     <LinearLayout
         android:id="@+id/layout_photo_button"
@@ -47,9 +48,11 @@
             android:id="@+id/button_foto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/SagasTheme.Button"
             android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
-            android:text="Tomar foto"/>
+            android:text="@string/tomar_foto"
+            tools:ignore="ObsoleteLayoutParam" />
 
     </LinearLayout>
 
@@ -62,12 +65,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="@string/message_imagen_nitida"
             android:textColor="@color/colorTextLogin"
-            android:textSize="25dp"
+            android:textSize="18sp"
             android:textStyle="italic" />
 
 
@@ -78,23 +81,30 @@
 
             <Button
                 android:id="@+id/button_foto_correcta"
+                style="@style/SagasTheme.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
-                android:gravity="center_vertical"
                 android:layout_weight="1"
-                android:text="@string/message_nitida_si"/>
+                android:gravity="center_vertical"
+                android:text="@string/message_nitida_si"
+                android:textAlignment="center"
+                tools:ignore="ObsoleteLayoutParam" />
 
             <Button
                 android:id="@+id/button_foto_incorrecta"
+                style="@style/SagasTheme.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
-                android:gravity="center_vertical"
                 android:layout_weight="1"
-                android:text="@string/message_nitida_no"/>
+                android:gravity="center_vertical"
+                android:text="@string/message_nitida_no"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                tools:ignore="ObsoleteLayoutParam" />
 
         </LinearLayout>
     </LinearLayout>
@@ -103,11 +113,11 @@
         android:id="@+id/textIndicaciones"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="@string/mensaje_foto_papeleta"
         android:textColor="@color/colorTextLogin"
-        android:textSize="25dp" />
+        android:textSize="18sp" />
 
 </LinearLayout>
