--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera_lectura.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera_lectura.xml
@@ -10,7 +10,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activity.CameraLecturaActivity">
+    tools:context=".Activity.CameraLecturaActivity"
+    tools:ignore="ScrollViewSize">
 
     <LinearLayout
         android:id="@+id/LLCameraLecturaActivityTitulo"
@@ -50,6 +51,8 @@
             android:paddingTop="5dp">
 
             <Button
+                style="@style/SagasTheme.Button"
+                android:textColor="@color/textcolorButton"
                 android:id="@+id/BtnCameraLecturaTomarFoto"
                 android:layout_width="15dp"
                 android:layout_height="wrap_content"
@@ -126,6 +129,8 @@
 
             <Button
                 android:id="@+id/BtnCameraLecturaFotoNitidaSi"
+                style="@style/SagasTheme.Button"
+                android:textColor="@color/textcolorButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -134,6 +139,8 @@
 
             <Button
                 android:id="@+id/BtnCameraLecturaFotoNitidaNo"
+                style="@style/SagasTheme.Button"
+                android:textColor="@color/textcolorButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
