--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_captura_porcentaje.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_captura_porcentaje.xml
@@ -101,11 +101,11 @@
         android:layout_gravity="center"
         android:layout_marginLeft="2sp"
         android:layout_marginRight="2sp"
-        android:background="@color/colorButtonLogin"
         android:text="@string/message_acept"
+        style="@style/SagasTheme.Button"
         android:textColor="@color/colorTextButtonLogin"
         android:textSize="18sp"
         tools:ignore="SpUsage" />
-
+<!--        android:background="@color/colorButtonLogin"-->
 
 </LinearLayout>
