--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_iniciar_descarga.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_iniciar_descarga.xml
@@ -198,12 +198,12 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
-                android:background="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:minWidth="160dp"
                 android:text="@string/registrar"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="24sp" />
-
+    <!--                android:background="@color/colorButtonLogin"-->
         </LinearLayout>
 
 
