--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_datos.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_datos.xml
@@ -23,8 +23,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:paddingTop="15dp"
                 android:paddingBottom="15dp"
-                android:paddingTop="25dp"
                 android:text="@string/toma_de_lectura_inicial"
                 android:textAlignment="center"
                 android:textSize="25sp" />
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingTop="25dp"
+                android:paddingTop="5sp"
                 android:text="@string/seleciona_la_estaci_n_de_carburaci_n"
                 android:textAlignment="viewStart"
                 android:textSize="15sp" />
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingTop="25dp"
+                android:paddingTop="5sp"
                 android:text="@string/selecciona_el_tipo_de_medidor_porcentual"
                 android:textSize="15sp" />
 
@@ -79,16 +79,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="15dp"
-                android:layout_marginLeft="85dp"
-                android:layout_marginRight="85dp"
+                android:layout_marginLeft="45dp"
                 android:layout_marginTop="15dp"
-                android:backgroundTint="@color/colorButtonLogin"
+                android:layout_marginRight="45dp"
+                android:layout_marginBottom="15dp"
+                style="@style/SagasTheme.Button"
+                android:padding="15sp"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="30sp"
+                android:textSize="24sp"
                 tools:ignore="ObsoleteLayoutParam,UnusedAttribute" />
-
+<!--                android:backgroundTint="@color/colorButtonLogin"-->
         </LinearLayout>
     </ScrollView>
 
