--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_pipa.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_pipa.xml
@@ -21,8 +21,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="15dp"
-                android:paddingTop="25dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="10dp"
                 android:text="@string/toma_de_lectura"
                 android:textAlignment="center"
                 android:textSize="24sp" />
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingTop="15dp"
+                android:paddingTop="10dp"
                 android:text="@string/selecciona_la_pipa"
                 android:textSize="18sp" />
 
@@ -73,17 +73,19 @@
                 android:id="@+id/BtnLecturaPipaActivityGuardar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:layout_marginLeft="85dp"
-                android:layout_marginRight="85dp"
+                android:layout_marginLeft="25dp"
                 android:layout_marginTop="15dp"
-                android:backgroundTint="@color/colorButtonLogin"
+                android:layout_marginRight="25dp"
+                android:layout_marginBottom="15dp"
+                style="@style/SagasTheme.Button"
                 android:clickable="true"
                 android:focusable="true"
+                android:padding="20sp"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="30sp"
+                android:textSize="24sp"
                 tools:ignore="UnusedAttribute" />
+            <!--                android:backgroundTint="@color/colorButtonLogin"-->
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
