--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_recarga_pipa.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_recarga_pipa.xml
@@ -21,8 +21,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:paddingTop="15sp"
                 android:paddingBottom="15dp"
-                android:paddingTop="20dp"
                 android:text="@string/Recarga_pipa"
                 android:textAlignment="center"
                 android:textSize="24sp" />
@@ -33,8 +33,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="5dp"
                 android:paddingTop="15dp"
+                android:paddingBottom="5dp"
                 android:text="@string/selecciona_almacen_principal" />
 
             <Spinner
@@ -71,7 +71,7 @@
                 android:layout_marginRight="15dp"
                 android:paddingBottom="5dp"
                 android:paddingTop="15dp"
-                android:text="Selecciona el tipo de medidor de la pipa:"
+                android:text="@string/selecciona_el_tipo_de_medidor_de_la_pipa"
                 android:visibility="gone" />
 
             <Spinner
@@ -91,12 +91,12 @@
                 android:id="@+id/BtnRecargaPipaActivityAceptar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="85dp"
-                android:layout_marginRight="85dp"
-                android:backgroundTint="@color/colorButtonLogin"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                style="@style/SagasTheme.Button"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="30sp"
+                android:textSize="24sp"
                 tools:ignore="UnusedAttribute"
                 tools:layout_editor_absoluteX="136dp"
                 tools:layout_editor_absoluteY="201dp" />
