--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registrar_papeleta.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registrar_papeleta.xml
@@ -426,7 +426,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
-                android:background="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:minWidth="120dp"
                 android:text="@string/registrar"
                 android:textColor="@color/colorTextButtonLogin"
@@ -439,7 +439,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:background="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:minWidth="120dp"
                 android:text="@string/limpiar_campos"
                 android:textColor="@color/colorTextButtonLogin"
