--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_subir_imagenes.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_subir_imagenes.xml
@@ -7,12 +7,12 @@
         android:id="@+id/textTitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="@string/cargando_imagenes_inicio"
         android:textColor="@color/colorTextLogin"
-        android:textSize="45dp"
+        android:textSize="30sp"
         android:textStyle="bold" />
 
 </LinearLayout>
