--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_traspaso_estacion.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_traspaso_estacion.xml
@@ -21,11 +21,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="25dp"
                 android:paddingTop="15dp"
+                android:paddingBottom="15dp"
                 android:text="@string/trasferencia_de_gas"
                 android:textAlignment="center"
-                android:textSize="30sp" />
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/TVTraspasoEstacionActivityEstacionSalidaTitulo"
@@ -33,8 +33,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="5dp"
                 android:paddingTop="15dp"
+                android:paddingBottom="5dp"
                 android:text="@string/selecciona_la_estacion_de_carburacion_de_salida"
                 android:textSize="18sp" />
 
@@ -52,8 +52,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="5dp"
                 android:paddingTop="15dp"
+                android:paddingBottom="5dp"
                 android:text="@string/selecciona_el_tipo_de_medidor_porcentual"
                 android:textSize="18sp" />
 
@@ -67,7 +67,7 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="10dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp" />
 
@@ -77,8 +77,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="5dp"
                 android:paddingTop="15dp"
+                android:paddingBottom="5dp"
                 android:text="@string/selecciona_la_pipa_de_entrada"
                 android:textSize="18sp" />
 
@@ -92,7 +92,7 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
+                android:layout_height="20dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp" />
 
@@ -102,10 +102,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="85dp"
                 android:layout_marginRight="85dp"
-                android:backgroundTint="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="30sp"
+                android:textSize="18sp"
                 tools:ignore="UnusedAttribute" />
         </LinearLayout>
     </ScrollView>
