--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_traspaso_pipa.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_traspaso_pipa.xml
@@ -20,8 +20,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="15dp"
                 android:paddingTop="5dp"
+                android:paddingBottom="15dp"
                 android:text="@string/trasferencia_de_gas"
                 android:textAlignment="center"
                 android:textSize="24sp" />
@@ -32,8 +32,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:paddingTop="15dp"
                 android:text="@string/selecciona_la_pipa_de_salida"
                 android:textSize="18sp" />
 
@@ -51,8 +51,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:paddingTop="15sp"
                 android:paddingBottom="5dp"
-                android:paddingTop="20dp"
                 android:text="@string/selecciona_la_pipa_de_entrada"
                 android:textSize="18sp" />
 
@@ -74,12 +74,12 @@
                 android:id="@+id/BtnTraspasoPipaActivityGuardar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="85dp"
-                android:layout_marginRight="85dp"
-                android:backgroundTint="@color/colorButtonLogin"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                style="@style/SagasTheme.Button"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="30sp"
+                android:textSize="24sp"
                 tools:ignore="UnusedAttribute" />
         </LinearLayout>
     </ScrollView>
