--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_ver_reporte.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_ver_reporte.xml
@@ -20,7 +20,7 @@
             <WebView
                 android:id="@+id/WVVerReporteActivityReporte"
                 android:layout_width="match_parent"
-                android:layout_height="750sp"
+                android:layout_height="399sp"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="8dp">
 
@@ -39,8 +39,8 @@
                     android:backgroundTint="@color/colorButtonLogin"
                     android:drawableStart="@drawable/ic_go_back_dark"
                     android:text="@string/terminar"
-                    android:textColor="@color/colorTextButtonLogin"
-                    android:textSize="30sp"
+                    style="@style/SagasTheme.Button"
+                    android:textSize="24sp"
                     android:visibility="gone"
                     tools:ignore="ButtonStyle,UnusedAttribute" />
 
@@ -49,10 +49,10 @@
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    android:backgroundTint="@color/colorButtonLogin"
+                    style="@style/SagasTheme.Button"
                     android:text="@string/imprimir_reporte"
                     android:textColor="@color/colorTextButtonLogin"
-                    android:textSize="30sp"
+                    android:textSize="24sp"
                     tools:ignore="ButtonStyle,UnusedAttribute" />
             </LinearLayout>
 
