--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_vista_orden_compra.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_vista_orden_compra.xml
@@ -16,12 +16,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:gravity="center"
                 android:text="@string/title_orden_compra"
                 android:textColor="@color/colorTextLogin"
-                android:textSize="20dp"
+                android:textSize="18sp"
                 android:textStyle="italic" />
 
             <Spinner
@@ -42,13 +42,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:gravity="center"
+                    android:layout_marginBottom="10dp"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="@string/seleccionar_fecha"
                     android:textColor="@color/colorTextLogin"
-                    android:textSize="20dp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -156,29 +156,29 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:gravity="right"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="@string/subtotal"
                     android:textColor="@color/colorTextLogin"
-                    android:textSize="20dp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/textViewSubtotal"
                     android:layout_width="270dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:gravity="right"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="$10,000,000"
                     android:textColor="@color/colorTextLogin"
-                    android:textSize="20dp" />
+                    android:textSize="18sp" />
 
 
             </LinearLayout>
@@ -192,29 +192,29 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:gravity="right"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="@string/iva"
                     android:textColor="@color/colorTextLogin"
-                    android:textSize="20dp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/textViewIva"
                     android:layout_width="270dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:gravity="right"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="@string/subtotal"
                     android:textColor="@color/colorTextLogin"
-                    android:textSize="20dp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -227,29 +227,29 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:gravity="right"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="@string/ips"
                     android:textColor="@color/colorTextLogin"
-                    android:textSize="20dp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/textViewIps"
                     android:layout_width="270dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:gravity="right"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="@string/subtotal"
                     android:textColor="@color/colorTextLogin"
-                    android:textSize="20dp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -262,29 +262,29 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:gravity="right"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="@string/total"
                     android:textColor="@color/colorTextLogin"
-                    android:textSize="20dp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/textViewTotal"
                     android:layout_width="270dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:gravity="right"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="@string/subtotal"
                     android:textColor="@color/colorTextLogin"
-                    android:textSize="20dp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
